[gd_scene load_steps=12 format=3 uid="uid://cpp0ggfrq60rh"]

[ext_resource type="Script" path="res://scripts/playarea_scene.gd" id="1_50slw"]
[ext_resource type="PackedScene" uid="uid://f7waxa37afm5" path="res://objects/ui/gui.tscn" id="1_p8jrk"]
[ext_resource type="Texture2D" uid="uid://djjqcpip47nvu" path="res://assets/textures/ui/settings/settings_0.png" id="2_ygdst"]
[ext_resource type="Texture2D" uid="uid://cmn0yg3ihe4kb" path="res://assets/textures/ui/settings/settings_1.png" id="3_min1x"]
[ext_resource type="PackedScene" uid="uid://d1ndlffcdqcdt" path="res://objects/ui/in_game_menu.tscn" id="4_a6r2r"]
[ext_resource type="Texture2D" uid="uid://criakq8vjllb2" path="res://assets/textures/backgrounds/simulation_background.png" id="5_gdm1l"]
[ext_resource type="PackedScene" uid="uid://bruqk3h0qhqhe" path="res://objects/trash_space.tscn" id="6_45pb2"]
[ext_resource type="Theme" uid="uid://dxxt0em6v1rwd" path="res://assets/themes/main_menu.tres" id="6_uilbc"]
[ext_resource type="PackedScene" uid="uid://pogu7wgnj60w" path="res://objects/zs_card_deck.tscn" id="7_tl6p3"]
[ext_resource type="PackedScene" uid="uid://beliecqhfu21d" path="res://objects/zs_card_hand.tscn" id="8_vl5x2"]
[ext_resource type="PackedScene" uid="uid://dln4gn1dgacmu" path="res://objects/board.tscn" id="9_1ppyr"]

[node name="playarea" type="Node2D"]
script = ExtResource("1_50slw")

[node name="GUI" parent="." instance=ExtResource("1_p8jrk")]

[node name="menu" type="TextureButton" parent="GUI"]
offset_left = 732.0
offset_top = 4.0
offset_right = 764.0
offset_bottom = 36.0
texture_normal = ExtResource("2_ygdst")
texture_pressed = ExtResource("3_min1x")
stretch_mode = 3

[node name="in-game_menu" parent="GUI" instance=ExtResource("4_a6r2r")]
visible = false

[node name="background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(384, 216)
scale = Vector2(4, 4)
texture = ExtResource("5_gdm1l")
metadata/_edit_lock_ = true

[node name="camera" type="Camera2D" parent="."]
position = Vector2(384, 216)
ignore_rotation = false
metadata/_edit_lock_ = true

[node name="trash_space10" parent="." instance=ExtResource("6_45pb2")]
position = Vector2(40, 376)
input_pickable = false

[node name="zs_card_deck" parent="." instance=ExtResource("7_tl6p3")]
position = Vector2(720, 368)
randomized = true
MAX_CARDS = 5

[node name="zs_card_hand" parent="." instance=ExtResource("8_vl5x2")]
position = Vector2(384, 416)

[node name="platform" parent="." instance=ExtResource("9_1ppyr")]
position = Vector2(384, 184)

[node name="status" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_uilbc")

[node name="vbox2" type="VBoxContainer" parent="status"]
layout_mode = 0
offset_left = 56.0
offset_top = 72.0
offset_right = 102.0
offset_bottom = 304.0

[node name="user_health" type="Label" parent="status/vbox2"]
layout_mode = 2
size_flags_vertical = 2
text = "100hp"

[node name="opponent_health" type="Label" parent="status/vbox2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
text = "100hp"

[node name="vbox" type="VBoxContainer" parent="status"]
layout_mode = 1
anchors_preset = -1
offset_left = 664.0
offset_top = 72.0
offset_right = 696.0
offset_bottom = 283.0
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="timer" type="ProgressBar" parent="status/vbox"]
custom_minimum_size = Vector2(0, 181)
layout_mode = 2
step = 1.0
value = 100.0
fill_mode = 3
show_percentage = false

[node name="time" type="Label" parent="status/vbox/timer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "0:30"
horizontal_alignment = 1
vertical_alignment = 1

[node name="end_turn" type="Button" parent="status/vbox"]
layout_mode = 2
disabled = true
text = "END"

[node name="turn_points" type="Label" parent="status"]
layout_mode = 0
offset_left = 640.0
offset_top = 336.0
offset_right = 650.0
offset_bottom = 362.0
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="opponenet_hand" type="Marker2D" parent="."]
position = Vector2(384, -64)

[connection signal="pressed" from="GUI/menu" to="GUI/in-game_menu" method="_on_menu_pressed"]
[connection signal="pressed" from="status/vbox/end_turn" to="." method="_on_end_turn_pressed"]
